# contract-intelligence-agent

./: .env.example  .gitignore  LICENSE  README.md  agents-cli-manifest.yaml  pyproject.toml
.agents/skills/clause-risk-review/: SKILL.md
app/: __init__.py  agent.py  model.py
samples/: 01_clean_lease.txt  02_auto_renewal_trap.txt  03_penalty_unilateral.txt  04_pii_leak.txt  05_injection_hidden.txt  06_injection_plus_pii.txt  en_clean_msa.txt  en_full_traps.txt  en_injection_pii.txt  zh_full_service_traps.txt
skills/: __init__.py  llm_backend.py
skills/compare/: __init__.py
skills/contract_review/: __init__.py  config.py  logic.py  review.py  schemas.py  security.py
skills/read_document/: __init__.py
skills/risk_explain/: __init__.py
skills/summarize/: __init__.py
skills/translate/: __init__.py
tests/: test_backend.py  test_logic.py  test_read_document.py  test_review.py  test_security.py  test_skills.py
