[project]
name = "contract-intelligence-agent"
version = "0.1.0"
description = "ClauseLens — a modular contract-intelligence agent (ADK 2.x); contract review is the first of several reusable skills."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "google-adk>=2.0.0,<3.0.0",
    "google-genai>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "skills"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
